--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "react-perfect-scrollbar": "^1.5.3",
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.1.1",
-    "reactstrap": "^8.0.1"
+    "reactstrap": "^8.0.1",
+    "url-loader": "^2.1.0"
   },
   "scripts": {
     "start": "react-scripts start",
